Fix scrollbar showing in menu on Firefox

--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -159,6 +159,13 @@ body {
     margin-right: -30px;
 }
 
+
+.navbar-collapse.collapsing .navbar-right,
+.navbar-collapse.in .navbar-right {
+    margin-right: -15px;
+}
+
+
 .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
     font-family: 'Inconsolata';
     margin-left: 10px;
